k8s/apps/development/argo-workflows/ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows
  namespace: argo-workflows
  labels:
    app.kubernetes.io/name: argo-workflows
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo-workflows.${CLUSTER_DOMAIN}`)
      services:
        - name: argo-server
          namespace: argo-workflows
          port: web
          scheme: https
          serversTransport: argo-workflows-transport
